--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+    <head>
+        <title>Instagram</title>
+        <link rel="stylesheet" href="./css/main.css" />
+    </head>
+    <body>
+        <div class="main">
+            <img class="muckup" src="./images/phones.png" alt="" />
+            <div class="description">
+                <div class="header">
+                    <img src="./images/brand.png" alt="" />
+                    <button type="button">
+                        <img src="./images/home.png" />
+                        Log in
+                    </button>
+                </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+                <div class="content">
+                    <h3>
+                        Instagram Capture and Share <br />
+                        the World's Moments
+                    </h3>
+                    <p>
+                        Instagram is a fast, beautiful and fun way to share your life with friends and family. <br />
+                        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way
+                        to see the world. <br />
+                        Oh yeah, did we mention it's free?
+                    </p>
+                    <div class="buttons">
+                        <img src="./images/badge-iphone.png" alt="" />
+                        <img src="./images/badge-android.png" alt="" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            Download on the App Store Get it on Google Play About Us Support Blog Press API Jobs Privacy Terms &copy;
+            2014 Instagram
+        </footer>
+    </body>
 </html>
