--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,22 +10,23 @@
             <div class="description">
                 <div class="header">
                     <img src="./images/brand.png" alt="" />
-                    <button type="button">
+                    <button class="button" type="button">
                         <img src="./images/home.png" />
                         Log in
                     </button>
                 </div>
 
                 <div class="content">
-                    <h3>
-                        Instagram Capture and Share <br />
+                    <h3 class="title">
+                        Capture and Share <br />
                         the World's Moments
                     </h3>
-                    <p>
-                        Instagram is a fast, beautiful and fun way to share your life with friends and family. <br />
+                    <p class="teaser">
+                        Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life
+                        with friends and family. <br /><br />
                         Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
                         &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way
-                        to see the world. <br />
+                        to see the world. <br /><br />
                         Oh yeah, did we mention it's free?
                     </p>
                     <div class="buttons">
@@ -35,9 +36,18 @@
                 </div>
             </div>
         </div>
-        <footer>
-            Download on the App Store Get it on Google Play About Us Support Blog Press API Jobs Privacy Terms &copy;
-            2014 Instagram
+        <footer class="footer">
+            <div class="links-wrapper">
+                <a class="footer-link" href="">About Us</a>
+                <a class="footer-link" href="">Support</a>
+                <a class="footer-link" href="">Blog</a>
+                <a class="footer-link" href="">Press</a>
+                <a class="footer-link" href="">API</a>
+                <a class="footer-link" href="">Jobs</a>
+                <a class="footer-link" href="">Privacy</a>
+                <a class="footer-link" href="">Terms</a>
+                &copy; 2014 Instagram
+            </div>
         </footer>
     </body>
 </html>
